--- a/Fine3/WebContent/assets/css/style.css
+++ b/Fine3/WebContent/assets/css/style.css
@@ -23,15 +23,18 @@ html, body {
 	position:relative;
 	width: 100%;
 	overflow:hidden;
-}
-
-.container {
 	padding-right:0;
 	padding-left:0;
 	margin-right:auto;
 	margin-left:auto;
-	width:100%;
 }
+
+/* .container {
+	padding-right:0;
+	padding-left:0;
+	margin-right:auto;
+	margin-left:auto;
+} */
 
 .carousel {
 	position:relative;
