--- a/Fine3/WebContent/assets/css/style.css
+++ b/Fine3/WebContent/assets/css/style.css
@@ -8,6 +8,7 @@ body {
 	font-style: normal;
 	font-weight: 300;
 	position: relative;
+	min-height: 100%;
 }
 
 html, body {
@@ -15,7 +16,6 @@ html, body {
 	padding: 0;
 	height: 100%;
 	width: 100%;
-	min-height:100%;
 	overflow-x: hidden;
 }
 
@@ -27,6 +27,7 @@ html, body {
 	padding-left:0;
 	margin-right:auto;
 	margin-left:auto;
+	min-height:100%;
 }
 
 /* .container {
@@ -249,4 +250,10 @@ a {
 
 .owl-theme .owl-controls .owl-page.active span, .owl-theme .owl-controls.clickable .owl-page:hover span {
 	background:white;
+}
+
+.footer{
+	margin-top : -1.9em;
+	height: 1.9em;
+	background: grey;
 }
