--- a/Fine3/WebContent/assets/css/style.css
+++ b/Fine3/WebContent/assets/css/style.css
@@ -29,6 +29,9 @@ html, body {
 	margin-left:auto;
 	min-height:100%;
 }
+.wrap{
+	transition : .5s;
+}
 
 .carousel {
 	position:relative;
@@ -339,4 +342,8 @@ a {
 .How{
 	padding-top: 6rem;
 	padding-bottom: 6rem;
+}
+
+#map-canvas {
+	height: 72vh;
 }
