--- a/Fine3/WebContent/assets/css/responsive.css
+++ b/Fine3/WebContent/assets/css/responsive.css
@@ -399,10 +399,9 @@
 }
 
 @media screen and (max-width:767px) {
-	
 	#owl-demo .item .owl-overlay img {
-		padding-top:3rem;
-		width:8rem;
+		padding-top: 3rem;
+		width: 8rem;
 	}
 	.navbar-default .navbar-collapse {
 		display: none;
@@ -413,7 +412,7 @@
 	}
 	.navbar-default .navbar-nav>li>a {
 		margin-left: 0px;
-		border: 2px solid rgba(156, 188, 128, 0.21);
+		border: 2px solid rgba(105, 178, 206, 0.51);
 	}
 	.navbar-nav {
 		margin: 0px 0px 20px;
@@ -425,46 +424,55 @@
 	}
 	.navbar-default .navbar-brand {
 		float: left;
-		margin-left:15px;
+		margin-left: 15px;
 	}
-	
 	.navbar-default .navbar-brandr {
 		float: right;
-		margin-right:15px;
-		display:block;
+		margin-right: 15px;
+		display: block;
 	}
-	
 	#container {
-		padding:0 15px 51px 15px;
+		padding: 0 15px 51px 15px;
 	}
-	
 	#footer {
-		padding:0 15px 0px 15px;
+		padding: 0 15px 0px 15px;
 	}
-	
-	
 	#owl-demo .item .owl-overlay h2 {
-		font-size:1.1rem;
-		line-height:1.9rem;
-		margin-bottom:0;
+		font-size: 1.1rem;
+		line-height: 1.9rem;
+		margin-bottom: 0;
+	}
+	#owl-demo .item .owl-overlay .gray {
+		font-size: 1.1rem;
+		line-height: 1.9rem;
+	}
+	#owl-demo .item .owl-overlay p {
+		color: white;
+		font-size: 1.02rem;
+		line-height: 1.7rem;
+		margin-top: 0;
+	}
+	#owl-demo .item .owl-overlay img {
+		margin: 0 auto 2rem;
 	}
 	
-	#owl-demo .item .owl-overlay .gray {
+	.map_content {
+		height:32vh;
+		padding:1rem 3rem 1rem 3rem;
+	}
 	
-	font-size:1.1rem;
-	line-height:1.9rem;
+	#map-canvas {
+		height:30vh;
+	}
 	
+	.map_content .tel {
+		margin-top:1rem;
+	}
 	
-}
-#owl-demo .item .owl-overlay p {
-	color:white;
-	font-size:1.02rem;
-	line-height:1.7rem;
-		margin-top:0;
-}
-#owl-demo .item .owl-overlay img {
-	margin:0 auto 2rem;
-}
+	.How {
+		padding-top:4rem;
+		padding-bottom:4rem;
+	}
 	
 }
 
