집에가서 보지않겠지만 일단 올리고본다 ㅎㅎ

--- a/Fine3/WebContent/assets/css/responsive.css
+++ b/Fine3/WebContent/assets/css/responsive.css
@@ -23,13 +23,47 @@
 	}
 }
 
-@media screen and (max-width:383px) {
+
+@media screen and (min-width:320px) and (max-width:374px) {
+	
+	#owl-demo .item .owl-overlay {
+		width:76% !important;
+		margin: 0 12% !important;
+	}
+	
+	
+}
+
+	
+@media screen and (min-width:375px) and (max-width:425px) {
+
+#owl-demo .item .owl-overlay {
+		width:68% !important;
+		margin: 0 16% !important;
+	}
+	
+}
+	
+@media screen and (max-width:375px) {
 	.footer-area p {
 		font-size: 12px;
 	}
+	.container .container-item .about {
+		font-size: 3.0rem;
+	}
 }
 
-@media screen and (min-width:321px) and (max-width:375px) {
+@media screen and (max-width:425px) {
+	.footer_contents img {
+		margin-bottom:19px;
+	}
+	
+	
+	
+}
+
+
+@media screen and (min-width:320px) and (max-width:375px) {
 	.in-content .viewmore {
 		width: 50%;
 		height: 40%;
@@ -45,6 +79,17 @@
 		margin-left: 0%;
 		height: 22%;
 		margin-top: -36.2%;
+	}
+	.footer_contents span {
+		font-size: 1.1rem !important;
+	}
+	.footer {
+		height: 9.8em !important;
+	}
+	
+	.container .container-item span {
+	
+		font-size:1.06rem !important;
 	}
 }
 
@@ -64,6 +109,9 @@
 		margin-left: 0%;
 		height: 22%;
 		margin-top: -31.2%;
+	}
+	.footer_contents span {
+		font-size: 1.1rem !important;
 	}
 }
 
@@ -398,9 +446,15 @@
 	}
 }
 
+/* @media screen and (max-width:767px) {
+	.footer_contents img {
+		margin-bottom: 20px !important;
+	}
+} */
+
 @media screen and (max-width:767px) {
 	#owl-demo .item .owl-overlay img {
-		padding-top: 3rem;
+		padding-top: 1.4rem;
 		width: 8rem;
 	}
 	.navbar-default .navbar-collapse {
@@ -455,25 +509,55 @@
 	#owl-demo .item .owl-overlay img {
 		margin: 0 auto 2rem;
 	}
-	
 	.map_content {
-		height:32vh;
-		padding:1rem 3rem 1rem 3rem;
+		height: 32vh;
+		padding: 1rem 3rem 1rem 3rem;
 	}
-	
 	#map-canvas {
-		height:30vh;
+		height: 30vh;
 	}
-	
 	.map_content .tel {
-		margin-top:1rem;
+		margin-top: 1rem;
 	}
-	
 	.How {
-		padding-top:4rem;
-		padding-bottom:4rem;
+		padding-top: 4rem;
+		padding-bottom: 4rem;
 	}
-	
+	.container .container-item span {
+		font-size: 1.39rem;
+	}
+
+	/* 	.container .container-item h3 {
+		font-size:2.4rem;
+		line-height:1.93rem;
+	} */
+	.container .container-item .trim-span {
+		font-size: 2.4rem;
+		line-height: 1.93rem;
+	}
+	.container .container-item .trim {
+		margin-top: 8px !important;
+		line-height: 1.9rem;
+		font-size: 1.7rem;
+	}
+	.container .container-item .w-content {
+		height: 16vh;
+		padding: 0vh 14rem 0 2vw;
+	}
+	.container .container-item .w-img {
+		margin-bottom: 0;
+	}
+	.container .container-item .img-box {
+		margin-top: 6rem;
+	}
+	.container .container-item h3 {
+		
+	}
+	.footer {
+		padding-right: 3vw;
+		padding-left: 3vw;
+		height: 8.5em;
+	}
 }
 
 /* 
