--- a/Fine3/WebContent/assets/css/responsive.css
+++ b/Fine3/WebContent/assets/css/responsive.css
@@ -23,6 +23,22 @@
 	}
 }
 
+@media screen and (max-width:1199px){
+	.container .container-item .w-content2{
+		padding : 9.5vh 0rem 0 2.65rem;
+	}
+}
+@media screen and (max-width:991px){
+	.container .container-item .w-content2{
+		padding : 4.5vh 0rem 0 2.65rem ;
+	}
+}
+@media screen and (max-width:376px){
+	.container .container-item .w-content2{
+		padding : 2.5vh 0rem 0 2.65rem;
+	}
+}
+
 
 @media screen and (min-width:320px) and (max-width:374px) {
 	
@@ -388,7 +404,7 @@
 	}
 }
 
-/* ³Ø¼­½º¹ÝÀÀÇü */
+/* ï¿½Ø¼ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ */
 @media screen and (width:412px) and (height:732px) {
 	.carousel-inner>.item>img {
 		min-height: 495px;
@@ -398,21 +414,21 @@
 	}
 }
 
-/* ¾ÆÀÌÆù 5 */
+/* ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ 5 */
 @media screen and (width:320px) and (height:568px) {
 	.mgb-25 {
 		margin-bottom: 20px;
 	}
 }
 
-/* ¾ÆÀÌÆù 5 */
+/* ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ 5 */
 @media screen and (width:375px) and (height:667px) {
 	.mgb-25 {
 		margin-bottom: 40px;
 	}
 }
 
-/* ¾ÆÀÌÆù 6  */
+/* ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ 6  */
 @media screen and (width:414px) and (height:736px) {
 	.carousel-inner>.item>img {
 		min-height: 495px;
@@ -425,7 +441,7 @@
 	}
 }
 
-/* ¾ÆÀÌÆÐµå  */
+/* ï¿½ï¿½ï¿½ï¿½ï¿½Ðµï¿½  */
 @media screen and (width:768px) and (height:1024px) {
 	.navbar-header {
 		margin-left: 20px;
@@ -451,7 +467,7 @@
 	}
 }
 
-/* ¾ÆÀÌÆÐµå  */
+/* ï¿½ï¿½ï¿½ï¿½ï¿½Ðµï¿½  */
 @media screen and (width:1024px) and (height:1366px) {
 	.mgb-25 {
 		margin-bottom: 55px;
