--- a/Fine3/WebContent/assets/css/style.css
+++ b/Fine3/WebContent/assets/css/style.css
@@ -1,618 +1,634 @@
 @import url('../fonts/stylesheet.css');
+
 @import url('responsive.css');
+
 body {
-    background: #ffffff;
-    font-family: 'Nunito Sans', 'Nanum Gothic', sans-serif;
-    font-style: normal;
-    font-weight: 300;
-    position: relative;
-    min-height: 100%;
+	background: #ffffff;
+	font-family: 'Nunito Sans', 'Nanum Gothic', sans-serif;
+	font-style: normal;
+	font-weight: 300;
+	position: relative;
+	min-height: 100%;
 }
 
-html,
-body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    width: 100%;
-    overflow-x: hidden;
+html, body {
+	margin: 0;
+	padding: 0;
+	height: 100%;
+	width: 100%;
+	overflow-x: hidden;
 }
 
 #wrap {
-    width: 100%;
-    overflow: hidden;
-    padding-right: 0;
-    padding-left: 0;
-    margin-right: auto;
-    margin-left: auto;
-    min-height: 100%;
+	width: 100%;
+	overflow: hidden;
+	padding-right: 0;
+	padding-left: 0;
+	margin-right: auto;
+	margin-left: auto;
+	min-height: 100%;
 }
 
 .wrap {
-    transition: .5s;
+	transition: .5s;
 }
 
 .carousel {
-    position: relative;
+	position: relative;
 }
-
 
 /* Typography
 ------------------------------------- */
-
-h1,
-h2,
-h3,
-h4,
-h5 {
-    font-weight: 100;
+h1, h2, h3, h4, h5 {
+	font-weight: 100;
 }
 
-h2,
-h3,
-h5 {
-    letter-spacing: 4px;
-    text-transform: uppercase;
+h2, h3, h5 {
+	letter-spacing: 4px;
+	text-transform: uppercase;
 }
 
 h1 {
-    font-size: 2.4rem;
-    line-height: 3rem;
-    letter-spacing: 4px;
-    padding-bottom: 6px;
+	font-size: 2.4rem;
+	line-height: 3rem;
+	letter-spacing: 4px;
+	padding-bottom: 6px;
 }
 
 h2 {
-    color: #666;
-    font-size: 1.2rem;
-    padding-bottom: 10px;
+	color: #666;
+	font-size: 1.2rem;
+	padding-bottom: 10px;
 }
 
 h3 {
-    font-size: 1rem;
-    letter-spacing: 1px;
-    padding-bottom: 10px;
+	font-size: 1rem;
+	letter-spacing: 1px;
+	padding-bottom: 10px;
 }
 
 h4 {
-    color: #000000;
-    font-size: 0.9rem;
-    line-height: 28px;
-    letter-spacing: 1px;
+	color: #000000;
+	font-size: 0.9rem;
+	line-height: 28px;
+	letter-spacing: 1px;
 }
 
 p {
-    font-size: 13px;
-    font-weight: 300;
-    line-height: 25px;
-    word-spacing: 1px;
-    font-weight: 600;
-    color: rgba(33, 31, 31, 0.75);
+	font-size: 13px;
+	font-weight: 300;
+	line-height: 25px;
+	word-spacing: 1px;
+	font-weight: 600;
+	color: rgba(33, 31, 31, 0.75);
 }
 
 a {
-    outline: none;
-    text-decoration: none !important;
+	outline: none;
+	text-decoration: none !important;
 }
 
 .no-padding {
-    padding: 0;
+	padding: 0;
 }
 
 .navbar-header {
-    margin-left: 8rem;
-    margin-top: 1.3rem;
+	margin-left: 8rem;
+	margin-top: 1.3rem;
 }
 
 .navbar {
-    border: 0;
-    margin-bottom: 0px;
-    height: 76px;
+	border: 0;
+	margin-bottom: 0px;
+	height: 76px;
 }
 
 .navbar-default {
-    background-color: transparent;
+	background-color: transparent;
 }
-
 
 /* .mgb-10 {
 	margin-bottom: 10px;
 } */
-
 .mgb-25 {
-    margin-bottom: 25px;
+	margin-bottom: 25px;
 }
 
 .pdl-15 {
-    padding-left: 15px;
+	padding-left: 15px;
 }
 
 .navbar-default .navbar-brand {
-    float: none;
-    background: url(../images/fine-logo.png) no-repeat;
-    padding: 0px 72px 29px;
-    height: 53px;
+	float: none;
+	background: url(../images/fine-logo.png) no-repeat;
+	padding: 0px 72px 29px;
+	height: 53px;
 }
 
 .navbar-default .navbar-brandr {
-    float: none;
-    background: url(../images/justify.png) no-repeat;
-    padding: 0px 23px 29px;
-    height: 53px;
-    display: none;
+	float: none;
+	background: url(../images/justify.png) no-repeat;
+	padding: 0px 23px 29px;
+	height: 53px;
+	display: none;
 }
 
 @media ( min-width :768px) {
-    .navbar-default .navbar-collapse {
-        padding-top: 2.1vh;
-    }
-    .navbar-nav {
-        float: right;
-        padding-right: 5.5rem;
-    }
+	.navbar-default .navbar-collapse {
+		padding-top: 2.1vh;
+	}
+	.navbar-nav {
+		float: right;
+		padding-right: 5.5rem;
+	}
 }
 
 @media ( min-width :992px) {
-    .navbar {
-        width: 100%;
-    }
+	.navbar {
+		width: 100%;
+	}
 }
 
 .navbar-collapse .main-sub {
-    text-align: right;
-    font-size: 12px;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    padding-right: 40px;
+	text-align: right;
+	font-size: 12px;
+	margin-bottom: 10px;
+	margin-top: 10px;
+	padding-right: 40px;
 }
 
 .navbar-collapse .al2 {
-    color: black;
-    font-size: 13px;
+	color: black;
+	font-size: 13px;
 }
 
 .navbar-collapse .al {
-    color: rgba(115, 115, 101, 0.54);
-    font-size: 13px;
+	color: rgba(115, 115, 101, 0.54);
+	font-size: 13px;
 }
 
 .navbar-nav>li {
-    /* width: 140px; */
-    text-align: center;
+	/* width: 140px; */
+	text-align: center;
 }
 
 .navbar-default .navbar-nav>li>a {
-    color: rgba(0, 0, 0, 0.69);
-    font-weight: 600;
-    margin-left: 27px;
-    height: 38px;
-    padding-top: 7px;
+	color: rgba(0, 0, 0, 0.69);
+	font-weight: 600;
+	margin-left: 27px;
+	height: 38px;
+	padding-top: 7px;
 }
 
 #owl-demo .item {
-    max-height: 720px;
+	max-height: 720px;
 }
 
 #owl-demo .item .owl-overlay {
-    position: absolute;
-    width: 60%;
-    height: 100%;
-    text-align: center;
-    MARGIN: 0 20%;
+	position: absolute;
+	width: 60%;
+	height: 100%;
+	text-align: center;
+	MARGIN: 0 20%;
 }
 
 #owl-demo .item .p2 {
-    width: 40% !important;
-    margin: 0 30% !important;
-    text-align: left !important;
-    letter-spacing: -0.6px !important;
-    padding-top: 13.7vh;
+	width: 40% !important;
+	margin: 0 30% !important;
+	text-align: left !important;
+	letter-spacing: -0.6px !important;
+	padding-top: 13.7vh;
 }
 
-#owl-demo .item .p3 {}
+#owl-demo .item .p3 {
+	
+}
 
 #owl-demo .item .owl-overlay img {
-    width: 17rem;
-    height: auto;
-    margin: 0 auto 3vw;
-    padding-top: 15.5vh;
+	width: 17rem;
+	height: auto;
+	margin: 0 auto 3vw;
+	padding-top: 15.5vh;
 }
 
 #owl-demo .item .owl-overlay h2 {
-    color: white;
-    font-size: 2.3vw;
-    font-weight: 600;
-    line-height: 5.4rem;
+	color: white;
+	font-size: 2.3vw;
+	font-weight: 600;
+	line-height: 5.4rem;
 }
 
 #owl-demo .item .ovr-2 h2 {
-    letter-spacing: 0.11rem;
-    text-transform: capitalize;
-    font-size: 2.85vw;
+	letter-spacing: 0.11rem;
+	text-transform: capitalize;
+	font-size: 2.85vw;
 }
 
 #owl-demo .item .owl-overlay .ll {
-    letter-spacing: 1.2px !important;
-    text-transform: capitalize;
-    font-size: 4.8rem !important;
+	letter-spacing: 1.2px !important;
+	text-transform: capitalize;
+	font-size: 4.8rem !important;
 }
 
 #owl-demo .item .owl-overlay .gray {
-    color: #c3bfbf;
-    font-size: 2.3vw;
-    font-weight: 600;
-    line-height: 3.2vw;
+	color: #c3bfbf;
+	font-size: 2.3vw;
+	font-weight: 600;
+	line-height: 3.2vw;
 }
 
 #owl-demo .item .owl-overlay .light {
-    color: white;
-    font-size: 2.3vw;
-    font-weight: 300;
-    line-height: 3.2rem;
+	color: white;
+	font-size: 2.3vw;
+	font-weight: 300;
+	line-height: 3.2rem;
 }
 
 #owl-demo .item .owl-overlay p {
-    color: white;
-    font-size: 1.1vw;
-    line-height: 2.7rem;
-    font-weight: 300;
-    margin-top: 20px;
+	color: white;
+	font-size: 1.1vw;
+	line-height: 2.7rem;
+	font-weight: 300;
+	margin-top: 20px;
 }
 
 #owl-demo .item img {
-    width: 100%;
-    display: block;
-    height: auto;
+	width: 100%;
+	display: block;
+	height: auto;
 }
 
 .owl-wrapper-outer {
-    padding: 0 0 0 0;
+	padding: 0 0 0 0;
 }
 
 .owl-carousel .owl-wrapper-outer {
-    transition: .5s;
+	transition: .5s;
 }
 
-.owl-theme .owl-controls {}
+.owl-theme .owl-controls {
+	
+}
 
 .owl-theme .owl-controls .owl-page span {
-    background: transparent;
-    border-color: white;
-    border: 2.5px solid white;
+	background: transparent;
+	border-color: white;
+	border: 2.5px solid white;
 }
 
 .owl-theme .owl-controls .owl-buttons div {
-    background: black;
-    display: none;
+	background: black;
+	display: none;
 }
 
-.owl-theme .owl-controls .owl-page.active span,
-.owl-theme .owl-controls.clickable .owl-page:hover span {
-    background: white;
+.owl-theme .owl-controls .owl-page.active span, .owl-theme .owl-controls.clickable .owl-page:hover span
+	{
+	background: white;
 }
 
-.owl-theme .owl-controls .owl-page {}
+.owl-theme .owl-controls .owl-page {
+	
+}
 
 .owl-pagination {
-    position: absolute;
-    top: 85%;
-    width: 100%;
-    margin: 0 auto;
+	position: absolute;
+	top: 85%;
+	width: 100%;
+	margin: 0 auto;
 }
 
 .in-container-header {
-    display: inline-flex;
-    width: 100%;
-    border-bottom: 2px solid rgb(239, 231, 231);
+	display: inline-flex;
+	width: 100%;
+	border-bottom: 2px solid rgb(239, 231, 231);
 }
 
 .in-container-header .b-header {
-    margin-bottom: 1.5rem !important;
-    font-size: 3.2rem !important;
-    color: black;
-    letter-spacing: -0.07rem;
+	margin-bottom: 1.5rem !important;
+	font-size: 3.2rem !important;
+	color: black;
+	letter-spacing: -0.07rem;
 }
 
 .in-container-header img {
-    transform: rotate(98deg);
-    margin-top: -10px;
-    height: 14px;
+	transform: rotate(98deg);
+	margin-top: -10px;
+	height: 14px;
 }
 
 .in-container-header .contact-dot {
-    transform: rotate(100deg);
-    margin-top: -1.8rem;
-    height: 14px;
+	transform: rotate(100deg);
+	margin-top: -1.8rem;
+	height: 14px;
 }
 
 .in-container-header p {
-    margin-bottom: 5px;
-    font-size: 14px;
+	margin-bottom: 5px;
+	font-size: 14px;
 }
 
 .container .container-item {
-    margin-top: 3.2rem;
+	margin-top: 3.2rem;
 }
 
 .container .container-item .about {
-    font-size: 3.55rem;
-    text-transform: capitalize;
-    letter-spacing: -0.08rem;
-    line-height: 4.6rem;
-    margin-top: 0;
+	font-size: 3.55rem;
+	text-transform: capitalize;
+	letter-spacing: -0.08rem;
+	line-height: 4.6rem;
+	margin-top: 0;
 }
 
 .container .container-item .about .aqua {
-    color: #42bfeb;
+	color: #42bfeb;
 }
 
 .container .container-item .about .aqua2 {
-    color: #046497;
+	color: #046497;
 }
 
 .container .container-item .about .aqua3 {
-    color: #0b2c55;
+	color: #0b2c55;
 }
 
 .container .container-item .about-small {
-    margin-bottom: 0px;
-    padding-bottom: 0px;
-    font-size: 2.28rem;
-    text-transform: capitalize;
-    letter-spacing: 0.07rem;
-    margin-top: 0;
-    line-height: 4.6rem;
+	margin-bottom: 0px;
+	padding-bottom: 0px;
+	font-size: 2.28rem;
+	text-transform: capitalize;
+	letter-spacing: 0.07rem;
+	margin-top: 0;
+	line-height: 4.6rem;
 }
 
 .container .container-item span {
-    font-size: 1.55rem;
+	font-size: 1.55rem;
 }
 
 .container .container-item h3 {
-    font-size: 2.4rem;
-    line-height: 3.2rem;
-    text-transform: initial;
-    margin-top: 1.2rem !important;
-    letter-spacing: -0.4px;
-    margin-bottom: 0;
-    padding-bottom: 0;
+	font-size: 2.4rem;
+	line-height: 3.2rem;
+	text-transform: initial;
+	margin-top: 1.2rem !important;
+	letter-spacing: -0.4px;
+	margin-bottom: 0;
+	padding-bottom: 0;
 }
 
 .container .container-item .trim {
-    margin-top: 0 !important;
+	margin-top: 0 !important;
 }
 
 .container .container-item strong {
-    margin-top: 0 !important;
-    font-weight: 300 !important;
+	margin-top: 0 !important;
+	font-weight: 300 !important;
 }
 
 .container .container-item .black {
-    color: black;
-    font-weight: 600;
-    font-size: 2.4rem !important;
-    line-height: 3.2rem !important;
+	color: black;
+	font-weight: 600;
+	font-size: 2.4rem !important;
+	line-height: 3.2rem !important;
 }
 
 .container .container-item img {
-    border-bottom-right-radius: 6.7%;
-    max-height: 36vh;
-    width: 100%;
+	border-bottom-right-radius: 6.7%;
+	width: 100%;
 }
 
 .container .container-item .w-img {
-    max-height: 45vh;
-    border-bottom-right-radius: 0;
-    margin-bottom: 20px;
-    width: 100%;
+	border-bottom-right-radius: 0;
+	/* margin-bottom: 20px; */
+	width: 100%;
+	
 }
 
 .container .container-item .img-box {
-    text-align: center;
-    margin-top: 5rem;
+	text-align: center;
+	margin-top: 5rem;
 }
 
 .container .container-item .w-content {
-    height: 45vh;
-    padding: 32vh 14rem 0 1vw;
-    text-align: left;
+	text-align: left;
 }
 
 .container .container-item .w-content2 {
-    padding: 14.5vh 0rem 0 2.65rem;
-    text-align: left;
+	padding: 14.5vh 0rem 0 2.65rem;
+	text-align: left;
 }
 
 .container .container-item .w-content h2 {
-    margin-bottom: 0;
-    font-size: 1.67rem;
-    letter-spacing: 0px;
-    font-weight: 600;
-    color: rgb(66, 191, 235);
+	margin-bottom: 0;
+	font-size: 1.67rem;
+	letter-spacing: 0px;
+	font-weight: 600;
+	color: rgb(66, 191, 235);
 }
 
 .container .container-item .w-content2 h2 {
-    margin-bottom: 0;
-    font-size: 1.67rem;
-    letter-spacing: 0px;
-    font-weight: 600;
-    color: rgb(66, 191, 235);
+	margin-bottom: 0;
+	font-size: 1.67rem;
+	letter-spacing: 0px;
+	font-weight: 600;
+	color: rgb(66, 191, 235);
 }
 
-.container .container-item .w-content span {}
+.container .container-item .w-content span {
+	
+}
 
 .img-box .item {
-    display: flex;
-    margin-bottom: 2.6rem;
+	display: flex;
+	height: auto;
+	margin-bottom: 20px;
 }
 
 .container .container-item .btnS {
-    margin-top: 5vh;
-    font-weight: 600;
-    font-size: 1.6rem;
-    background: transparent;
-    padding: 0.4vh 4rem 0.4vh 4rem;
-    border: 3.45px solid #7fcef4;
+	margin-top: 5vh;
+	font-weight: 600;
+	font-size: 1.6rem;
+	background: transparent;
+	padding: 0.4vh 4rem 0.4vh 4rem;
+	border: 3.45px solid #7fcef4;
 }
 
 .footer {
-    height: 9em;
-    background: RGB(127, 206, 244);
+	height: 9em;
+	background: RGB(127, 206, 244);
 }
 
 .footer_contents {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-    height: 8vh;
-    line-height: 1.6rem;
+	padding-top: 2rem;
+	padding-bottom: 2rem;
+	height: 8vh;
+	line-height: 1.6rem;
 }
 
 .footer_contents span {
-    display: block;
-    font-size: 1.2rem;
-    color: white;
+	display: block;
+	font-size: 1.2rem;
+	color: white;
 }
 
 .footer_contents img {
-    width: 80px;
-    height: auto;
-    margin-bottom: 14px;
+	width: 80px;
+	height: auto;
+	margin-bottom: 14px;
 }
 
 .footer_contents .icon-box {
-    float: right;
-    padding-top: 0.5rem;
+	float: right;
+	padding-top: 0.5rem;
 }
 
 .How {
-    padding-top: 6rem;
-    padding-bottom: 6rem;
-    background: white;
-    position: relative;
+	padding-top: 6rem;
+	padding-bottom: 6rem;
+	background: white;
+	position: relative;
 }
 
 .fa {
-    font-size: 1.7em;
-    color: white;
-    padding: 0.5vh;
+	font-size: 1.7em;
+	color: white;
+	padding: 0.5vh;
 }
 
 #map-canvas {
-    height: 64vh;
+	height: 64vh;
 }
 
-#contact_wrap {}
+#contact_wrap {
+	
+}
 
 .map_wrap {
-    padding: 4.5vh 0 3.8vh 0;
-    overflow: hidden;
+	padding: 4.5vh 0 3.8vh 0;
+	overflow: hidden;
 }
 
 .map_content {
-    height: 64vh;
-    background: white;
-    padding: 37.5vh 3.5rem 2vh 3.5rem;
+	height: 64vh;
+	background: white;
+	padding: 37.5vh 3.5rem 2vh 3.5rem;
 }
 
 .map_content .map-subtitle {
-    margin-bottom: 0px;
-    padding-bottom: 0px;
-    font-size: 1.88rem;
-    text-transform: capitalize;
-    letter-spacing: 0.07rem;
-    margin-top: 0;
-    line-height: 4.6rem;
+	margin-bottom: 0px;
+	padding-bottom: 0px;
+	font-size: 1.88rem;
+	text-transform: capitalize;
+	letter-spacing: 0.07rem;
+	margin-top: 0;
+	line-height: 4.6rem;
 }
 
 .map_content .tel {
-    margin-top: 3rem;
+	margin-top: 3rem;
 }
 
 .map_content span {
-    font-size: 1.55rem;
+	font-size: 1.55rem;
 }
 
 .map_header {
-    border-bottom: 2px solid #d6d4d4;
-    display: block;
-    margin-top: 30px;
+	border-bottom: 2px solid #d6d4d4;
+	display: block;
+	margin-top: 30px;
 }
 
 .map_header p {
-    font-size: 4rem;
-    font-weight: 600;
-    line-height: normal;
+	font-size: 4rem;
+	font-weight: 600;
+	line-height: normal;
 }
 
 .header-top {
-    padding-top: 3.4rem;
+	padding-top: 3.4rem;
 }
 
 .h2-gray {
-    color: gray;
+	color: gray;
 }
 
 .h2-aqua {
-    color: rgb(66, 191, 235) !important;
+	color: rgb(66, 191, 235) !important;
 }
 
 .bg-white {
-    background: white;
+	background: white;
 }
 
 .bold {
-    font-weight: 600;
+	font-weight: 600;
 }
 
 .border-custom {
-    border-top: 2px solid rgba(66, 191, 235, 0.37);
-    border-right: 2px solid rgba(66, 191, 235, 0.37);
-    border-radius: 0% !important;
+	border-top: 2px solid rgba(66, 191, 235, 0.37);
+	border-right: 2px solid rgba(66, 191, 235, 0.37);
+	border-radius: 0% !important;
 }
 
 .border-custom2 {
-    border-top: 2px solid rgba(66, 191, 235, 0.37);
-    border-left: 2px solid rgba(66, 191, 235, 0.37);
-    border-radius: 0% !important;
+	border-top: 2px solid rgba(66, 191, 235, 0.37);
+	border-left: 2px solid rgba(66, 191, 235, 0.37);
+	border-radius: 0% !important;
 }
 
 .alice-blue {
-    background: #f3fbfe !important;
+	background: #f3fbfe !important;
 }
 
 .mr-1rem {
-    margin-right: 1rem;
+	margin-right: 1rem;
 }
 
 .m-width img {
-    width: 100%;
+	width: 100%;
 }
 
 .ovr-2 {
-    text-align: left !important;
-    padding: 9.5% 0 0 4.4% !important;
+	text-align: left !important;
+	padding: 9.5% 0 0 4.4% !important;
 }
 
 .ovr-2 span {
-    font-size: 2.3vw;
-    color: rgba(255, 255, 255, 0.9);
+	font-size: 2.3vw;
+	color: rgba(255, 255, 255, 0.9);
 }
 
 .ovr-3 {
-    padding: 3.5% 0 0 0 !important;
+	padding: 3.5% 0 0 0 !important;
 }
 
 .ovr-3 h2 {
-    font-size: 1.43vw !important;
-    margin-top: 4.5vw;
+	font-size: 1.43vw !important;
+	margin-top: 4.5vw;
 }
 
 .ovr-3 .h-header {
-    letter-spacing: 1.215vw;
-    font-size: 2.19vw !important;
-    text-align: left;
+	letter-spacing: 1.215vw;
+	font-size: 2.19vw !important;
+	text-align: left;
 }
 
-.ovr-3 p {}
+.ovr-3 p {
+	
+}
 
-.ovr-3 span {}
+.ovr-3 span {
+	
+}
+
+.block {
+	display: block !important;
+}
+
+.mb-20 {
+	margin-bottom: 20px;
+}
+
+.w-height {
+	
+}
+
