--- a/Fine3/WebContent/assets/css/responsive.css
+++ b/Fine3/WebContent/assets/css/responsive.css
@@ -646,7 +646,7 @@
 }
 
 @media screen and (min-width:992px) {
-		.container .container-item .w-content {
+		/* .container .container-item .w-content {
 			padding:13.4vw 0 0 2vw;
 		}
 		
@@ -658,7 +658,7 @@
 		.w-height {
 		
 			height:21vw !important;
-		}
+		} */
 	}
 	
 	
