--- a/Fine3/WebContent/assets/css/responsive.css
+++ b/Fine3/WebContent/assets/css/responsive.css
@@ -75,12 +75,13 @@
 	}
 }
 
-
 @media screen and (max-width:480px) {
 	.container .container-item img {
-	/* 	max-height:36vh; */
+		/* 	max-height:36vh; */
+		
 	}
 }
+
 @media screen and (min-width:320px) and (max-width:375px) {
 	.in-content .viewmore {
 		width: 50%;
@@ -151,27 +152,31 @@
 }
 
 @media screen and (min-width:481px) and (max-width:767px) {
-
-.img-box .item {
-		padding:0 14% 0 14%;
+	.img-box .item {
+		padding: 0 14% 20px 14%;
+	}
+	.ovr-3 {
+		padding: 7.5% 0 0 0 !important;
+	}
+	.ovr-3 h2 {
+		line-height: 4.6vw !important;
+	}
+	.m-p {
+		padding: 0 14% 0 14%;
+	}
 }
 
-.ovr-3 {
-	padding:7.5% 0 0 0 !important;
+@media screen and (min-width:481px) and (max-width:768px) {
+	.w-height {
+		padding: 6% 0 6% 6% !important;
+	}
 }
 
-.ovr-3 h2 {
-	line-height:4.6vw !important;
+@media screen and (min-width:769px) and (max-width:991px) {
+	.w-height {
+		padding: 12% 0 0% 4% !important;
+	}
 }
-
-.m-p {
-	padding:0 14% 0 14%;
-}
-
-
-
-}
-
 
 @media screen and (min-width:481px) and (max-width:540px) {
 	.in-content .viewmore {
@@ -235,10 +240,10 @@
 		margin-top: -25.2%;
 	}
 	#owl-demo .item .owl-overlay h2 {
-		line-height: 3.5rem !important;
+		line-height: 3.2rem !important;
 	}
 	#owl-demo .item .owl-overlay .gray {
-		line-height: 3.5rem !important;
+		line-height: 3.2rem !important;
 	}
 }
 
@@ -501,8 +506,24 @@
 	.navbar-header {
 		margin-left: 20px;
 	}
+	.map_content {
+		padding: 21% 4% 0% 4% !important;
+	}
 }
 
+@media screen and (min-width:992px) and (max-width:1199px) {
+	.map_content {
+		padding: 16.5% 4% 0% 4% !important;
+	}
+}
+
+
+@media screen and (min-width:1200px) {
+	.map_content {
+		padding: 14% 4% 0% 4% !important;
+	}
+	
+}
 
 @media screen and (max-width:767px) {
 	#owl-demo .item .owl-overlay img {
@@ -567,7 +588,7 @@
 		padding: 1rem 3rem 1rem 3rem;
 	}
 	#map-canvas {
-		height: 30vh;
+		height: 60vw;
 	}
 	.map_content .tel {
 		margin-top: 1rem;
@@ -594,7 +615,7 @@
 		font-size: 1.7rem;
 	}
 	.container .container-item .w-content {
-	
+		
 	}
 	.container .container-item .w-img {
 		margin-bottom: 0;
@@ -620,6 +641,10 @@
 }
 
 @media screen and (max-width:480px) {
+	.container .container-item .w-content {
+		padding-bottom: 0vw;
+		padding-top: 20px;
+	}
 	#owl-demo .item .owl-overlay p {
 		display: none;
 	}
@@ -636,37 +661,55 @@
 		padding-top: 7.5vh;
 	}
 	#owl-demo .item .ovr-2 h2 {
-		font-size:3.45vw;
+		font-size: 3.45vw;
 	}
-	
 	.ovr-3 h2 {
-		line-height:4.9vw !important;
-	}
-}
-@media screen and (max-width : 768px){
-	.img-workbox{
-		display : block;
+		line-height: 4.9vw !important;
 	}
 }
 
-@media screen and (min-width:992px) {
-		/* .container .container-item .w-content {
-			padding:13.4vw 0 0 2vw;
-		}
-		
-		.container .container-item .w-img {
-			
-			max-height:21vw !important;
-		}
-		
-		.w-height {
-		
-			height:21vw !important;
-		} */
+@media screen and (max-width : 768px) {
+	.img-workbox {
+		display: block;
 	}
+}
+
+
+@media screen and (min-width : 768px) {
+	 
+	 .navbar-nav>li {
+	 	display:flex;
+	 }
+	  .none {
+	  
+	   display:block;
+	  }
 	
-	
-	
+	}
+
+@media screen and (min-width:992px) {
+	.container .container-item .w-content {
+		padding: 72% 0 0% 8% !important;
+	}
+}
+
+@media screen and (min-width:661px) and (max-width:768px) {
+	#owl-demo .item .owl-overlay p {
+		margin-top: 10px !important;
+	}
+}
+
+@media screen and (min-width:768px) and (max-width:1175px) {
+	#owl-demo .item .owl-overlay p {
+		font-size: 1.61vw !important;
+	}
+}
+
+@media screen and (min-width:580px) and (max-width:767px) {
+	#owl-demo .item .owl-overlay img {
+		padding-top: 8.5vh !important;
+	}
+}
 
 
 
@@ -691,4 +734,6 @@
 		width: 140px;
 		text-align: center;
 	} */
+	
+	
 }
